src/objects/ADvendio__MediaCampaign__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__ADTECH_Agency_Role__c</fullName>
        <description>Define which role should be assigned to the agency within ADTECH. This field is only relevant for ADTECH user.</description>
        <inlineHelpText>Define which role should be assigned to the agency within ADTECH. This field is only relevant for ADTECH user.</inlineHelpText>
        <label>ADTECH Agency Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                    <default>true</default>
                    <label>Customer</label>
                </value>
                <value>
                    <fullName>Advertiser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AI_Quantity__c</fullName>
        <description>This field displays the total amount of Ad Impressions for the media campaign.</description>
        <formula>ADvendio__AI_Quantity_of_CPM_items__c  +  ADvendio__AI_Quantity_of_CPX_items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field displays the total amount of Ad Impressions for the media campaign.</inlineHelpText>
        <label>AI Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AI_Quantity_of_CPM_items__c</fullName>
        <description>This field adds up the amount of all CPM campaign items.</description>
        <inlineHelpText>This field adds up the amount of all CPM campaign items.</inlineHelpText>
        <label>AI Quantity of CPM items</label>
        <summarizedField>ADvendio__Campaign_Item__c.ADvendio__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.ADvendio__Billing_category__c</field>
            <operation>equals</operation>
            <value>CPM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.ADvendio__DoNotShowOnProposalPDF__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__AI_Quantity_of_CPX_items__c</fullName>
        <description>This field adds up the amount of all guaranteed impressions of all non-CPM campaign items.</description>
        <inlineHelpText>This field adds up the amount of all guaranteed impressions of all non-CPM campaign items.</inlineHelpText>
        <label>AI Quantity of CPX items</label>
        <summarizedField>ADvendio__Campaign_Item__c.ADvendio__Guaranteed_AI__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.ADvendio__Guaranteed_AI__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.ADvendio__Billing_category__c</field>
            <operation>notEqual</operation>
            <value>CPM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.ADvendio__DoNotShowOnProposalPDF__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter Advertiser to whom the media campaign should be assigned.</description>
        <inlineHelpText>Enter Advertiser to whom the media campaign should be assigned.</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Account_Agency</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>AccountIntermediary</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Campaigns (Account)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdManagerStatus__c</fullName>
        <description>Displays the processing status - could be entered manually or by a Workflow, Batch or Lightning Flow.</description>
        <inlineHelpText>Displays the processing status of that Media Campaign.</inlineHelpText>
        <label>Ad Manager Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdserverName__c</fullName>
        <description>Enter campaign name should be used for booking by adserver.</description>
        <inlineHelpText>Enter campaign name should be used for booking by adserver.</inlineHelpText>
        <label>Adserver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserAgencyRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advertiser Agency relation</label>
        <referenceTo>ADvendio__Advertiser_Agency_relation__c</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>MediaCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter Agency to whom the media campaign should be assigned.</description>
        <inlineHelpText>Enter Agency to whom the media campaign should be assigned.</inlineHelpText>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Account_Client</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>AccountIntermediary</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Campaigns (Agency)</relationshipLabel>
        <relationshipName>Campaign0s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AlternateOrderId__c</fullName>
        <label>Alternate Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net3__c</fullName>
        <description>This revenue is the agency net value (N2) minus third party comission.</description>
        <formula>IF(ISNULL(ADvendio__Amount_net_net_net__c),ADvendio__Amount_net_net__c * (1 -  IF(ISNULL(ADvendio__Third_party_commission__c),0, ADvendio__Third_party_commission__c)),ADvendio__Amount_net_net_net__c)</formula>
        <inlineHelpText>This revenue is the agency net value (N2) minus third party comission.</inlineHelpText>
        <label>Amount net3</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net_net__c</fullName>
        <description>This revenue is the customer net value (N1) minus agency comission.</description>
        <inlineHelpText>This revenue is the customer net value (N1) minus agency comission.</inlineHelpText>
        <label>Amount net/net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net_net_net__c</fullName>
        <description>Filled by trigger rollup from CampaignItems</description>
        <inlineHelpText>This revenue is the agency net value (N2) minus third party comission.</inlineHelpText>
        <label>Amount net/net/net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net_net_of_CPM_items__c</fullName>
        <description>This revenue is the agency net value (N2) of all CPM campaign items.</description>
        <inlineHelpText>This revenue is the agency net value (N2) of all CPM campaign items.</inlineHelpText>
        <label>Amount net/net of CPM items</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net_net_of_CPX_items__c</fullName>
        <description>This revenue is the agency net value (N2) of all non-CPM campaign items.</description>
        <inlineHelpText>This revenue is the agency net value (N2) of all non-CPM campaign items.</inlineHelpText>
        <label>Amount net/net of CPX items</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Amount_net_net_of_all__c</fullName>
        <formula>ADvendio__Amount_net_net_of_CPM_items__c  +  ADvendio__Amount_net_net_of_CPX_items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount net/net of all</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__BillMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Booked_Date__c</fullName>
        <description>Enter the media campaign&apos;s booking date.</description>
        <inlineHelpText>Enter the media campaign&apos;s booking date.</inlineHelpText>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Booking_in_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box shows if the interface already processes a transfer from the media campaign to the ad server.</description>
        <inlineHelpText>This check box shows if the interface already processes a transfer from the media campaign to the ad server.</inlineHelpText>
        <label>Booking in Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__BuyerCountry__c</fullName>
        <description>Displays the Country of the debtors billing address.</description>
        <formula>ADvendio__invoice_recipient__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Country of the debtors billing address.</inlineHelpText>
        <label>Buyer Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Campaign_End_Date__c</fullName>
        <description>This date is automatically filled according to the campaign items. The campain&apos;s last day will be displayed.</description>
        <inlineHelpText>This date is automatically filled according to the campaign items. The campain&apos;s last day will be displayed.</inlineHelpText>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Campaign_Start_Date__c</fullName>
        <description>This date is automatically filled according to the campaign items. The campain&apos;s first day will be displayed.</description>
        <inlineHelpText>This date is automatically filled according to the campaign items. The campain&apos;s first day will be displayed.</inlineHelpText>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Close_Date__c</fullName>
        <description>Enter the expected closing date of this media campaign.</description>
        <inlineHelpText>Wann soll die Entscheidung für dieses Angebot fallen, ob das Angebot angenommen oder abgelehnt wird?</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Closed_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box shows if the media campaign was lost.</description>
        <inlineHelpText>This check box shows if the media campaign was lost.</inlineHelpText>
        <label>Closed/Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Closed_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box shows if the media campaign was won.</description>
        <inlineHelpText>This check box shows if the media campaign was won.</inlineHelpText>
        <label>Closed/Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Commitment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the Media Campaign to an active commitment (Compare with Media Campaign Run Time) to apply the Commitment Conditions to this Media Campaign.</description>
        <inlineHelpText>Please chose an active Commitment if necessary.</inlineHelpText>
        <label>Commitment</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (((2 AND 6) OR (3 AND 7)) OR (4 AND 5))</booleanFilter>
            <filterItems>
                <field>ADvendio__Commitment__c.ADvendio__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.ADvendio__Account__c</field>
                <operation>equals</operation>
                <valueField>ADvendio__Commitment__c.ADvendio__Advertiser__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.ADvendio__Agency__c</field>
                <operation>equals</operation>
                <valueField>ADvendio__Commitment__c.ADvendio__Agency__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.ADvendio__Account__c</field>
                <operation>equals</operation>
                <valueField>ADvendio__Commitment__c.ADvendio__AdvertiserAgencyRelation__r.ADvendio__Advertiser__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.ADvendio__Agency__c</field>
                <operation>equals</operation>
                <valueField>ADvendio__Commitment__c.ADvendio__AdvertiserAgencyRelation__r.ADvendio__Agency__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.ADvendio__Account__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.ADvendio__Agency__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__Commitment__c</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>Media_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <description>Enter the media campaign&apos;s description. It will be displayed on the final proposal as well.</description>
        <inlineHelpText>Enter the media campaign&apos;s description. It will be displayed on the final proposal as well.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Discounted_Amount__c</fullName>
        <inlineHelpText>B1 minus all discounts (except AE and allowance)</inlineHelpText>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Dispatch__c</fullName>
        <label>Dispatch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                    <default>true</default>
                    <label>Print</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Document_type__c</fullName>
        <description>Select the PDF&apos;s heading.</description>
        <inlineHelpText>Select the PDF&apos;s heading.</inlineHelpText>
        <label>Document type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Order Confirmation</fullName>
                </value>
                <value>
                    <fullName>Optimierung</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Early_Payment_Discount__c</fullName>
        <description>Enter a percentage to grant an early payment discount.</description>
        <inlineHelpText>Enter a percentage to grant an early payment discount.</inlineHelpText>
        <label>Early Payment Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Estimated_net__c</fullName>
        <description>Expected customer net value (N1) depending on probability.</description>
        <formula>ADvendio__Discounted_Amount__c  *  ADvendio__Propability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected customer net value (N1) depending on propability.</inlineHelpText>
        <label>Estimated net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Estimated_net_net__c</fullName>
        <description>Expected agency net value (N2) depending on probability.</description>
        <formula>ADvendio__Amount_net_net__c  *  ADvendio__Propability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected agency net value (N2) depending on propability.</inlineHelpText>
        <label>Estimated net/net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExchangeRateAccount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Exchange rate from the organization standard currency to the advertisers currency when the MediaCampaign was invoiced.</description>
        <inlineHelpText>Exchange rate from the organization currency to the currency of the advertiser.</inlineHelpText>
        <label>Exchange Rate Advertiser</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExchangeRateAgency__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Exchange rate from the organization standard currency to the agency&apos;s currency when the MediaCampaign was invoiced.</description>
        <inlineHelpText>Exchange rate from the organization currency to the currency of the agency.</inlineHelpText>
        <label>Exchange Rate Agency</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExchangeRate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Exchange Rate to Organizations standard Currency</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Gross_amount_B2__c</fullName>
        <inlineHelpText>dieser Wert wird aktuell nicht benutzt</inlineHelpText>
        <label>Gross amount (B2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Gross_amount_B3__c</fullName>
        <inlineHelpText>Sum of all sales-prices with extra charges included</inlineHelpText>
        <label>Gross amount (B3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Gross_amount__c</fullName>
        <description>This revenue adds the gross amounts of all campaign items.</description>
        <inlineHelpText>This revenue adds the gross amounts of all campaign items.</inlineHelpText>
        <label>Gross amount</label>
        <summarizedField>ADvendio__Campaign_Item__c.ADvendio__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.ADvendio__DoNotShowOnProposalPDF__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__Intermediary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter Intermediary to whom the media campaign should be assigned.</description>
        <label>Intermediary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Account_Agency</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Account_Client</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Campaigns (Intermediary)</relationshipLabel>
        <relationshipName>IntermediaryCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Invoice_gross_Amount__c</fullName>
        <description>This revenue is the gross amount minus total taxes.</description>
        <formula>IF( ADvendio__Show_Third_Party_Commission__c = FALSE, ADvendio__Amount_net_net__c + ADvendio__Sum_of_taxes__c,  ADvendio__Amount_net3__c + ADvendio__Sum_of_taxes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This revenue is the gross amount minus total taxes.</inlineHelpText>
        <label>Invoice gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountTotal__c</fullName>
        <description>This formula calculates the sum of your taxable amount (depending on your type settings) and adds the taxes to it and if applicable, the nontaxable amount.</description>
        <formula>ADvendio__TaxableAmountTotal__c + ADvendio__VatTotal__c +  ADvendio__NonTaxableAmountTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula calculates the sum of your taxable amount (depending on your type settings) and adds the taxes to it and if applicable, the nontaxable amount.</inlineHelpText>
        <label>Invoiced Amount Gross (Total)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountVatType1__c</fullName>
        <description>This formula calculates the sum of all items of type 1 and adds the VAT.</description>
        <formula>ADvendio__TaxableAmountVatType1__c +  ADvendio__VatAmountType1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula calculates the sum of all items of type 1 and adds the VAT.</inlineHelpText>
        <label>Invoiced Amount Gross (VAT Type 1)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicedAmountVatType2__c</fullName>
        <description>This formula calculates the sum of all items of type 2 and adds the VAT.</description>
        <formula>ADvendio__TaxableAmountVatType2__c + ADvendio__VatAmountType2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula calculates the sum of all items of type 2 and adds the VAT.</inlineHelpText>
        <label>Invoiced Amount Gross (VAT Type 2)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box shows whether the media campaign is approved.</description>
        <inlineHelpText>This check box shows whether the media campaign is approved.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Legal entity, to which media campaign belongs to.</description>
        <inlineHelpText>Please enter a legal entity to which this media campaign belongs. Once a legal entity is assigned, it can&apos;t be changed any more.</inlineHelpText>
        <label>Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ADvendio__LegalEntity__c.ADvendio__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__LegalEntity__c</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>MediaCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaignFullNumber__c</fullName>
        <formula>IF(ADvendio__MediaCampaignNumber__c!=&quot;&quot;, ADvendio__MediaCampaignNumberPrefix__c &amp; ADvendio__MediaCampaignNumber__c &amp; ADvendio__MediaCampaignNumberSuffix__c, IF(OR(ADvendio__MediaCampaignNumberPrefix__c!=&quot;&quot;,ADvendio__MediaCampaignNumberSuffix__c!=&quot;&quot;), SUBSTITUTE(ADvendio__Offer_Number__c, &quot;ON-&quot;, ADvendio__MediaCampaignNumberPrefix__c) &amp; ADvendio__MediaCampaignNumberSuffix__c, ADvendio__Offer_Number__c &amp; ADvendio__MediaCampaignNumberSuffix__c))</formula>
        <label>Media Campaign Full Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaignNumberPrefix__c</fullName>
        <label>Media Campaign Number Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaignNumberSuffix__c</fullName>
        <label>Media Campaign Number Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaignNumber__c</fullName>
        <label>Media Campaign Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__NewVatCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New VAT Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__NextNewPositionNumber__c</fullName>
        <label>Next New Position Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__NonTaxableAmountTotal__c</fullName>
        <description>Displays the total amount of all campaign items sold which are nontaxable or have a tax exempt.</description>
        <inlineHelpText>Displays the total amount of all campaign items sold which are nontaxable or have a tax exempt.</inlineHelpText>
        <label>Nontaxable Amount (Total)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__OVKOfferType__c</fullName>
        <description>Field used for AGOF Interface - Sets the OVK Offer Type to order or offer based on the Advendio document type.</description>
        <formula>CASE(ADvendio__Document_type__c,&quot;Proposal&quot;,&quot;order&quot;,&quot;Order Confirmation&quot;,&quot;offer&quot;,&quot;Insertion Order&quot;,&quot;offer&quot;,&quot;offer&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sets the OVK Offer Type to order or offer based on the Advendio document type.</inlineHelpText>
        <label>OVK Offer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Offer_Number__c</fullName>
        <description>The proposal number is generated automatically by the system in ascending order for each media campaign.</description>
        <displayFormat>ON-{00000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>The proposal number is generated automatically by the system in ascending order for each media campaign.</inlineHelpText>
        <label>Offer Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ADvendio__OrderConfirmationUrl__c</fullName>
        <label>Order Confirmation Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ADvendio__PageEquivalency__c</fullName>
        <label>Total Page Equivalency</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentDueDate__c</fullName>
        <description>Essential for the Billing &amp; Accounting App and needs to be filled.</description>
        <inlineHelpText>Payment due at the beginning or the end of the interval?</inlineHelpText>
        <label>Payment Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__PaymentInterval__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>due to beginning of interval</fullName>
                    <default>true</default>
                    <label>due to beginning of interval</label>
                </value>
                <value>
                    <fullName>due to the end of interval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentInterval__c</fullName>
        <description>Essential for the Billing &amp; Accounting App and needs to be filled.</description>
        <inlineHelpText>Please choose the invoice interval</inlineHelpText>
        <label>Payment Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>total account (one Invoice)</fullName>
                </value>
                <value>
                    <fullName>monthly (1 month)</fullName>
                    <default>true</default>
                    <label>monthly (1 month)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentStart__c</fullName>
        <description>Essential for the Billing &amp; Accounting App and needs to be filled.</description>
        <inlineHelpText>First Invoice before or after Campaignstart?</inlineHelpText>
        <label>Payment Start</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__PaymentInterval__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>before / during Billingperiod</fullName>
                </value>
                <value>
                    <fullName>after Billingperiod</fullName>
                    <default>true</default>
                    <label>after Billingperiod</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentTermsLong__c</fullName>
        <description>Please enter here your Payment Terms for this Media Campaign e.g. 20 days net, 10 days 3% early payment discount. This Field have to be in the BA mapping to show on Invoice PDF.</description>
        <inlineHelpText>Please enter here your Payment Terms for this Media Campaign e.g. 20 days net, 10 days 3% early payment discount.</inlineHelpText>
        <label>Payment Terms</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentTerms__c</fullName>
        <label>Payment Terms (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>